# py-dj-es

./: README.md
cloudguard/: docker-compose.yml  pyproject.toml
cloudguard/api/v1/: endpoints.py  schemas.py
cloudguard/app/: settings.py  urls.py
cloudguard/core/: models.py
cloudguard/core/services/: k8s_engine.py
cloudguard/tests/: test_k8s.py
